# controllers/api/posts.js
@@ -46,6 +46,44 @@ exports.viewNotice = function (req, res) {
    });
 }
 
+
+// media, attached 파일정보 DB 저장
+exports.createMediaAttachedInfo = function (req, res) {
+   let pageSize, pageStartIndex;
+
+   // 페이지 정보 확인
+   if (!req.query.pageSize || !req.query.pageStartIndex) {
+      // query가 제대로 오지 않으면 초기값으로 보낸다.
+      pageSize = 10;
+      pageStartIndex = 0;
+   } else {
+      pageSize = _.toNumber(req.query.pageSize);
+      pageStartIndex = _.toNumber(req.query.pageStartIndex);
+   }
+   //공지사항 조회
+   return models.sequelize.query("select u.email, u.display_name, p.* " +
+      "from users as u, post as p where u.ID = p.user_id and p.post_type = 'notice' limit ?,?",
+      {replacements: [pageStartIndex, pageSize], type: models.sequelize.QueryTypes.SELECT}
+   ).then(function (noticeList) {
+      if (noticeList.length == 0) {
+         return res.status(400).json({
+            errorMsg: '정보 없음',
+            statusCode: -1
+         });
+      } else {
+         return res.status(200).json({
+            noticeList: noticeList,
+            statusCode: 1
+         });
+      }
+   }).catch(function (err) {
+      return res.status(400).json({
+         errorMsg: 'DB select error',
+         statusCode: -2
+      });
+   });
+}
+
 //게시글 출력
 exports.viewPosts = function (req, res) {
    let pageSize, pageStartIndex;
